--- a/boston_housing.ipynb
+++ b/boston_housing.ipynb
@@ -33,9 +33,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Boston housing dataset has 489 data points with 4 variables each.\n"
+     ]
+    }
+   ],
    "source": [
     "# Import libraries necessary for this project\n",
     "import numpy as np\n",
@@ -47,6 +55,7 @@
     "\n",
     "# Pretty display for notebooks\n",
     "%matplotlib inline\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "# Load the Boston housing dataset\n",
     "data = pd.read_csv('housing.csv')\n",
@@ -55,6 +64,23 @@
     "    \n",
     "# Success\n",
     "print(\"Boston housing dataset has {} data points with {} variables each.\".format(*data.shape))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The features in the data are ['RM', 'LSTAT', 'PTRATIO']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"The features in the data are {}\".format(list(features.columns)))"
    ]
   },
   {
@@ -81,32 +107,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Statistics for Boston housing dataset:\n",
+      "\n",
+      "Minimum price: $105000.00\n",
+      "Maximum price: $1024800.00\n",
+      "Mean price: $454342.94\n",
+      "Median price $438900.00\n",
+      "Standard deviation of prices: $165340.28\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: Minimum price of the data\n",
-    "minimum_price = None\n",
+    "minimum_price = prices.min()\n",
     "\n",
     "# TODO: Maximum price of the data\n",
-    "maximum_price = None\n",
+    "maximum_price = np.max(prices)\n",
     "\n",
     "# TODO: Mean price of the data\n",
-    "mean_price = None\n",
+    "mean_price = prices.mean()\n",
     "\n",
     "# TODO: Median price of the data\n",
-    "median_price = None\n",
+    "median_price = prices.median()\n",
     "\n",
     "# TODO: Standard deviation of prices of the data\n",
-    "std_price = None\n",
+    "std_price = prices.std()\n",
     "\n",
-    "# Show the calculated statistics\n",
+    "# Show the calculated statistics upto two decimal places\n",
     "print(\"Statistics for Boston housing dataset:\\n\")\n",
-    "print(\"Minimum price: ${}\".format(minimum_price)) \n",
-    "print(\"Maximum price: ${}\".format(maximum_price))\n",
-    "print(\"Mean price: ${}\".format(mean_price))\n",
-    "print(\"Median price ${}\".format(median_price))\n",
-    "print(\"Standard deviation of prices: ${}\".format(std_price))"
+    "print(\"Minimum price: ${:.2f}\".format(minimum_price)) \n",
+    "print(\"Maximum price: ${:.2f}\".format(maximum_price))\n",
+    "print(\"Mean price: ${:.2f}\".format(mean_price))\n",
+    "print(\"Median price ${:.2f}\".format(median_price))\n",
+    "print(\"Standard deviation of prices: ${:.2f}\".format(std_price))"
    ]
   },
   {
@@ -132,7 +172,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: **"
+    "**Answer: **\n",
+    "\n",
+    "1. 'RM' : it can be expected that a higher number of average number of rooms among the \n",
+    "    homes in the neighborhood should be associated with a higher MEDV. Thus, positive \n",
+    "    relationship can be expected. More rooms means more area, which is directly \n",
+    "    related to price. Hence the positive relationship.\n",
+    "    \n",
+    "    \n",
+    "2. 'LSTAT' : it should be expected that a house in a neighbourhood with a higher LSTAT \n",
+    "    should be able to fetch lower prices. Hence a negative relationship can be \n",
+    "    expected with MEDV. A higher LSTAT value indicates a lower overall economic \n",
+    "    status of the neighbourhood, decreasing attractiveness and also the \n",
+    "    feasibility of higher prices. Hence the negative relationship.\n",
+    "    \n",
+    "    \n",
+    "3. 'PTRATIO' : a house with a lower PTRATIO value should fetch higher prices. Thus a \n",
+    "    negative relationship can be expected with MEDV. This is because most \n",
+    "    parents would seek a neighbourhood where the children can get good quality \n",
+    "    of education. Since quality of education is inversely related to PTRATIO, a \n",
+    "    decrease in PTRATIO should mean higher MEDV.\n",
+    "\n"
    ]
   },
   {
