--- a/boston_housing.ipynb
+++ b/boston_housing.ipynb
@@ -221,20 +221,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 29,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Import 'r2_score'\n",
+    "from sklearn.metrics import r2_score\n",
     "\n",
     "def performance_metric(y_true, y_predict):\n",
     "    \"\"\" Calculates and returns the performance score between \n",
     "        true and predicted values based on the metric chosen. \"\"\"\n",
     "    \n",
     "    # TODO: Calculate the performance score between 'y_true' and 'y_predict'\n",
-    "    score = None\n",
+    "    score = r2_score(y_true,y_predict)\n",
     "    \n",
     "    # Return the score\n",
     "    return score"
@@ -260,11 +258,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model has a coefficient of determination, R^2, of 0.923.\n"
+     ]
+    }
+   ],
    "source": [
     "# Calculate the performance of this model\n",
     "score = performance_metric([3, -0.5, 2, 7, 4.2], [2.5, 0.0, 2.1, 7.8, 5.3])\n",
@@ -289,7 +293,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer:**\n",
+    "\n",
+    "The above model has a r2 score of 0.923. This means that it captures about 92% of the variance in the target variable. It is a high value and hence it can be considered to be a good model/"
    ]
   },
   {
@@ -308,16 +314,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training and testing split was successful.\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO: Import 'train_test_split'\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "# TODO: Shuffle and split the data into training and testing subsets\n",
-    "X_train, X_test, y_train, y_test = (None, None, None, None)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(features,prices,\n",
+    "                                                    random_state=42,\n",
+    "                                                    test_size=0.2,\n",
+    "                                                    shuffle=True)\n",
     "\n",
     "# Success\n",
     "print(\"Training and testing split was successful.\")"
